# fpga_index_accelerator

./: LICENSE  README.md
experiment_log/: README.md
experiment_log/DMA_Sources/: a.out  dma_bridge.c  prepare_kernel.sh  sorter  sorter.cpp
experiment_log/MetricHashing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
experiment_log/MetricHashing/lib/canned_food/: Experiment.cpp  Experiment.h
experiment_log/MetricHashing/lib/element/: Element.h  Vectorelement.cpp  Vectorelement.h
experiment_log/MetricHashing/lib/etc/: Flags.h  Macros.h
experiment_log/MetricHashing/lib/indices/: HashedPermutationIndex.cpp  HashedPermutationIndex.h  Index.h  StandardPermutationIndex.cpp  StandardPermutationIndex.h
experiment_log/MetricHashing/lib/log/: Log.cpp  Log.h
experiment_log/MetricHashing/lib/permutation/: Permutation.cpp  Permutation.h
experiment_log/MetricHashing/lib/visualization/: Screen.cpp  Screen.h
experiment_log/bitstreams/: bitstream_AXIS_01.bit  bitstream_AXIS_02_pure_with_ctrl.bit  bitstream_AXIS_03_sorter.bit  bitstream_dma.bit  bitstream_dma_adder.bit  bitstream_dma_bus_cloner.bit  bitstream_dma_multiplier.bit  bitstream_dma_sorter.bit  bitstream_dma_sorter_dummy.bit  bitstream_dma_sorter_port_changed.bit  bitstream_dma_sorter_stream.bit  bitstream_dma_without_tlast.bit  bitstream_dma_without_tlast_single_byte.bit
experiment_log/permutant_index/: README.md  constants.h  generate  generate_dataset.c  index  index.c
experiment_log/permutant_index_v1/: .gitignore  constants.h  generate  generate_dataset.c  index  nano.save
experiment_log/permutant_index_v2/: .gitignore  README.md  constants.h  element_test  index.c  makefile
tools/: automation.sh
(+536 files in other folders)
